--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@ DIV.Section1 {
 
 
 
+.style24 {
+	font-weight: bold;
+	border-width: 0px;
+}
+
+
+
 </style>
 
 
@@ -196,13 +203,13 @@ DIV.Section1 {
 	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="index_files/iftachG.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
+		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
 	</span></font></span></div>
 
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img2','Img1')"><img alt="" src="index_files/iftachC.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
+		<a href="javascript:MySwitch('Img2','Img1')"><img alt="" src="iftachC.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
 	</span></font></span></div>
 
 
@@ -375,9 +382,8 @@ DIV.Section1 {
 		  <span style="font-weight: 400;"><span dir="LTR" class="style14">
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>,
 		  <span dir="LTR" class="style14">
-		  and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a></span></span><br></span>
-		  Efficiency Improvements in Constructions of Pseudorandom 
-					Generators from One-way Functions<span dir="LTR" style="font-weight: 400;"><b><span style="font-weight: 400;"><img src="index_files/new.gif"></span></b></span><br>
+		  and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a></span></span></span><br>Efficiency Improvements in Constructions of Pseudorandom 
+					Generators from One-way Functions<span dir="LTR" style="font-weight: 400;"><span style="font-weight: 400;"><a href="new.gif"><img src="index_files/new.gif" class="style24"></a></span></span><br>
 					<span class="style14">
 		  		    Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
 		  [<a href="javascript:toggle('abstract-HillRevisted')">Abstract</a>] </span></h2>
@@ -408,7 +414,8 @@ NC<sup>1</sup>.
 		  </span><span dir="LTR"><b><span dir="LTR" style="font-weight: 400;">
 					<span style="font-weight: 400;">
 					<strong>Bounded Key-Dependent Message Security </strong>
-		<img src="index_files/new.gif"></span></span></b></span><br>
+					<a href="new.gif">
+		<img src="index_files/new.gif" class="style22"></a></span></span></b></span><br>
 		  <span style="font-weight: 400;">
 
 		  <span class="style14"><span dir="LTR" class="style14">To appear in Advances in Cryptology - Eurocrypt,
@@ -476,7 +483,8 @@ our proof of security makes to the KDM query function is <strong>inherent</stron
 		  </span><span dir="LTR"><b>Universal One-Way Hash Functions via 
 					Inaccessible Entropy
 					<span dir="LTR" style="font-weight: 400;"><span style="font-weight: 400;">
-		<img src="index_files/new.gif"></span></span></b></span><br>
+					<a href="new.gif">
+		<img src="index_files/new.gif" class="style22"></a></span></span></b></span><br>
 		  		  <span style="font-weight: 400;">
 		  <span style="font-weight: 400;">
 
@@ -516,7 +524,7 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 		  <a href="http://www.cs.princeton.edu/%7Emohammad/">Mohammad 
 		  Mahmoody</a> and <a href="http://www.cs.princeton.edu/%7Edxiao/">
 		  David Xiao</a> <br><strong>A New Sampling Protocol and Applications to 
-		  Basing Cryptographic Primitives on the Hardness of NP</strong><span style="font-weight: 400;"><b><i><span dir="LTR" style="font-weight: 400;"><img src="index_files/updated.gif" v:shapes="_x0000_i1025" border="0" height="12" width="60"></span></i></b></span></span></span><br>
+		  Basing Cryptographic Primitives on the Hardness of NP</strong><b><i><span dir="LTR" style="font-weight: 400;"><a href="updated.gif"><img src="index_files/updated.gif" v:shapes="_x0000_i1025" border="0" height="12" width="60"></a></span></i></b></span></span><br>
 
 		  <span class="style14">Manuscript, 2009</span><span style="font-weight: 400;">.<br>
 		  [<a href="javascript:toggle('abstract-NPtoSHC')">Abstract</a>] 
@@ -590,7 +598,8 @@ long as the verifier is also given a good approximation of the value
 		  <h2><span dir="LTR" style="font-weight: 400;">Iftach Haitner</span><span style="font-weight: 400;"><span dir="LTR" class="style14"><br>
 		  </span></span><span dir="LTR"><b><span style="font-weight: 400;">
 		  <span class="style14"><strong>A Parallel Repetition Theorem for Any 
-		  Interactive Argument </strong></span></span></b></span><span style="font-weight: 400;"><b><i><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR"><img src="index_files/updated.gif" v:shapes="_x0000_i1025" border="0" height="12" width="60"></span></span></span></i></b></span><br>
+		  Interactive Argument </strong></span></span></b></span><span style="font-weight: 400;"><b><i><span dir="LTR" class="style14"><span dir="LTR">
+		  <a href="updated.gif"><img src="index_files/updated.gif" v:shapes="_x0000_i1025" border="0" height="12" width="60"></a></span></span></i></b></span><br>
 		  <span style="font-weight: 400;"><span style="font-weight: 400;">IEEE Symposium on Foundations of Computer Science (FOCS), 
 		  2009</span>.<br><strong>Invited to the FOCS 2009 special issue of 
 		  SICOMP</strong><br>
