--- a/index.html
+++ b/index.html
@@ -128,13 +128,6 @@ DIV.Section1 {
 
 
 
-.style24 {
-	font-weight: bold;
-	border-width: 0px;
-}
-
-
-
 </style>
 
 
@@ -383,9 +376,7 @@ DIV.Section1 {
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>,
 		  <span dir="LTR" class="style14">
 		  and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a></span></span></span><br>Efficiency Improvements in Constructions of Pseudorandom 
-					Generators from One-way Functions<span dir="LTR" style="font-weight: 400;"><span style="font-weight: 400;"><a href="new.gif"><img src="index_files/new.gif" class="style24"></a></span></span><br>
-					<span class="style14">
-		  		    Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
+					Generators from One-way Functions<span class="style14"><img height="11" src="new.gif" width="28"><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
 		  [<a href="javascript:toggle('abstract-HillRevisted')">Abstract</a>] </span></h2>
 		  <span style="font-weight: 400;">
 		  <div class="box" id="abstract-HillRevisted" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -413,9 +404,8 @@ NC<sup>1</sup>.
 		  		  <a href="http://www.cs.technion.ac.il/%7Eyuvali/">Yuval Ishai</a><br></span>
 		  </span><span dir="LTR"><b><span dir="LTR" style="font-weight: 400;">
 					<span style="font-weight: 400;">
-					<strong>Bounded Key-Dependent Message Security </strong>
-					<a href="new.gif">
-		<img src="index_files/new.gif" class="style22"></a></span></span></b></span><br>
+					<strong>Bounded Key-Dependent Message Security 
+					<img height="11" src="new.gif" width="28"></strong></span></span></b></span><br>
 		  <span style="font-weight: 400;">
 
 		  <span class="style14"><span dir="LTR" class="style14">To appear in Advances in Cryptology - Eurocrypt,
@@ -482,9 +472,7 @@ our proof of security makes to the KDM query function is <strong>inherent</stron
 		  <a href="http://www.cs.berkeley.edu/%7Ehoeteck/">Hoeteck Wee</a></span><br></span>
 		  </span><span dir="LTR"><b>Universal One-Way Hash Functions via 
 					Inaccessible Entropy
-					<span dir="LTR" style="font-weight: 400;"><span style="font-weight: 400;">
-					<a href="new.gif">
-		<img src="index_files/new.gif" class="style22"></a></span></span></b></span><br>
+					</b></span><img height="11" src="new.gif" width="28"><br>
 		  		  <span style="font-weight: 400;">
 		  <span style="font-weight: 400;">
 
@@ -524,7 +512,7 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 		  <a href="http://www.cs.princeton.edu/%7Emohammad/">Mohammad 
 		  Mahmoody</a> and <a href="http://www.cs.princeton.edu/%7Edxiao/">
 		  David Xiao</a> <br><strong>A New Sampling Protocol and Applications to 
-		  Basing Cryptographic Primitives on the Hardness of NP</strong><b><i><span dir="LTR" style="font-weight: 400;"><a href="updated.gif"><img src="index_files/updated.gif" v:shapes="_x0000_i1025" border="0" height="12" width="60"></a></span></i></b></span></span><br>
+		  Basing Cryptographic Primitives on the Hardness of NP</strong><img height="11" src="new.gif" width="28"></span></span><br>
 
 		  <span class="style14">Manuscript, 2009</span><span style="font-weight: 400;">.<br>
 		  [<a href="javascript:toggle('abstract-NPtoSHC')">Abstract</a>] 
@@ -598,10 +586,11 @@ long as the verifier is also given a good approximation of the value
 		  <h2><span dir="LTR" style="font-weight: 400;">Iftach Haitner</span><span style="font-weight: 400;"><span dir="LTR" class="style14"><br>
 		  </span></span><span dir="LTR"><b><span style="font-weight: 400;">
 		  <span class="style14"><strong>A Parallel Repetition Theorem for Any 
-		  Interactive Argument </strong></span></span></b></span><span style="font-weight: 400;"><b><i><span dir="LTR" class="style14"><span dir="LTR">
-		  <a href="updated.gif"><img src="index_files/updated.gif" v:shapes="_x0000_i1025" border="0" height="12" width="60"></a></span></span></i></b></span><br>
-		  <span style="font-weight: 400;"><span style="font-weight: 400;">IEEE Symposium on Foundations of Computer Science (FOCS), 
-		  2009</span>.<br><strong>Invited to the FOCS 2009 special issue of 
+		  Interactive Argument </strong></span></span></b></span>
+		  <span style="font-weight: 400;">
+		  <span dir="LTR" style="font-weight: 400"><b>
+		  <img height="12" src="updated.gif" width="60"><br></b></span>IEEE Symposium on Foundations of Computer Science (FOCS), 
+		  2009.<br><strong>Invited to the FOCS 2009 special issue of 
 		  SICOMP</strong><br>
 		  [<a href="javascript:toggle('abstract-ParallelRepetition')">Abstract</a>] 
 		  [<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/ArgumentPR/ArgumentPR_CR.pdf">PDF</a>]<span style="font-weight: 400;">
