--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ DIV.Section1 {
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
 		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
+		  <br>
 	</span></font></span></div>
 
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
@@ -213,17 +214,20 @@ DIV.Section1 {
 	  <span class="style11" style="">
 	  <span class="style5">
 
-	  I am a postdoctoral researcher at the
+	  <span class="style18">I am a postdoctoral researcher at the
 	  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 	  Research New England</a>.
+
+
+	  </span>
 
 
 	  </span></span></span>
 
 	  <span style="">
 	  <span class="style5" style="">
-	  My main research interests are
-	  Foundation of Cryptography and Computational Complexity.</span></span><span class="style8" style=""><br>
+	  <span class="style18">My main research interests are
+	  Cryptography and Computational Complexity.</span></span></span><span class="style8" style=""><br>
 	  </span>
 	  <span class="style8" style="">
 
@@ -336,12 +340,8 @@ DIV.Section1 {
 </tbody></table>
 		</div>
 
-	  <br><br><strong>I'm on the job market for next year!</strong> relevant material (e.g., 
-	  CV, research statement) will be sent upon request.<br>
-
-	  </span>
-
-	 		   </span><br>
+	  <br><strong>I'm on the job market for next year!</strong> relevant material (e.g., 
+	  CV, research statement) will be sent upon request.</span></span><br>
 
 	  </font></td>
 
