--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@ DIV.Section1 {
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img2','Img1')"><img alt="" src="iftachC.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
+		<a href="javascript:MySwitch('Img2','Img1')"><img alt="" src="iftachC.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18"> <br>
+
 	</span></font></span></div>
 
 
