--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ DIV.Section1 {
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>,
 		  <span dir="LTR" class="style14">
 		  and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a></span></span></span><br>Efficiency Improvements in Constructions of Pseudorandom 
-					Generators from One-way Functions<span class="style14"><img height="11" src="new.gif" width="28"><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
+					Generators from One-way Functions<span class="style14"> <img height="11" src="new.gif" width="28"><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
 		  [<a href="javascript:toggle('abstract-HillRevisted')">Abstract</a>] </span></h2>
 		  <span style="font-weight: 400;">
 		  <div class="box" id="abstract-HillRevisted" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -407,9 +407,9 @@ NC<sup>1</sup>.
 					<span style="font-weight: 400;">
 					<strong>Bounded Key-Dependent Message Security 
 					<img height="11" src="new.gif" width="28"></strong></span></span></b></span><br>
-		  <span style="font-weight: 400;">
+		  		  <span style="font-weight: 400;">
 
-		  <span class="style14"><span dir="LTR" class="style14">To appear in Advances in Cryptology - Eurocrypt,
+		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
 				2010.</span></span></span><span style="font-weight: 400;"><br>
 		  [<a href="javascript:toggle('abstract-boundedkdm')">Abstract</a>] 
 		  [<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/BoundedKDM/boundedkdm.pdf">PDF</a>]</span></h2>
@@ -474,11 +474,9 @@ our proof of security makes to the KDM query function is <strong>inherent</stron
 		  </span><span dir="LTR"><b>Universal One-Way Hash Functions via 
 					Inaccessible Entropy
 					</b></span><img height="11" src="new.gif" width="28"><br>
-		  		  <span style="font-weight: 400;">
-		  <span style="font-weight: 400;">
-
-		  <span class="style14"><span dir="LTR" class="style14">To appear in Advances in Cryptology - Eurocrypt,
-				2010.</span></span></span><br>
+		  		    <span style="font-weight: 400;">
+		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
+				2010.</span></span><br>
 		  [<a href="javascript:toggle('abstract-UOWHF')">Abstract</a>]<span style="font-weight: 400;"><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b></span> </span></h2>
 		  <span style="font-weight: 400;">
 		  <div class="box" id="abstract-UOWHF" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -513,9 +511,12 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 		  <a href="http://www.cs.princeton.edu/%7Emohammad/">Mohammad 
 		  Mahmoody</a> and <a href="http://www.cs.princeton.edu/%7Edxiao/">
 		  David Xiao</a> <br><strong>A New Sampling Protocol and Applications to 
-		  Basing Cryptographic Primitives on the Hardness of NP</strong><img height="11" src="new.gif" width="28"></span></span><br>
+		  Basing Cryptographic Primitives on the Hardness of NP </strong><img height="11" src="new.gif" width="28"></span></span><br>
 
-		  <span class="style14">Manuscript, 2009</span><span style="font-weight: 400;">.<br>
+		  <span style="font-weight: 400;">
+		  <span class="style14">IEEE Conference on Computational Complexity&nbsp; 
+		  (CCC), 2010
+				</span>.<br>
 		  [<a href="javascript:toggle('abstract-NPtoSHC')">Abstract</a>] 
 		  <span style="font-weight: 400;">
 		  &nbsp;[<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SampleWithSize/SampleWithSize.pdf">PDF</a>]</span></span></h2> 
