--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@ NC<sup>1</sup>.
 		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
 				2010.</span></span></span><span style="font-weight: 400;"><br>
 		  [<a href="javascript:toggle('abstract-boundedkdm')">Abstract</a>] 
-		  [<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/BoundedKDM/boundedkdm.pdf">PDF</a>]</span></h2>
+		  [<a href="papers/BoundedKDM/boundedkdm_EuroCrypt.pdf">PDF</a>]<br>
+		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
+					<a href="papers/BoundedKDM/boundedkdm.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
 		  <span style="font-weight: 400;">
 		  <div class="box" id="abstract-boundedkdm" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We construct the first public-key encryption scheme that is proven secure (in 
@@ -464,7 +466,8 @@ query function in<br>
 our proof of security makes to the KDM query function is <strong>inherent</strong>.</span></h2>
 		  </div>
 		  </span></li><li>
-					<h2><span dir="LTR" style="font-weight: 400;">Iftach Haitner, </span>
+					<h2><span dir="LTR" style="font-weight: 400;">Iftach Haitner,
+					<span dir="LTR" style="font-weight: 400"><a href="http://research.microsoft.com/users/thomahol/">Thomas Holenstein</a><span style="font-weight: 400;"><span dir="LTR" class="style14">,</span></span> </span> </span>
 		  <span style="font-weight: 400;"><span dir="LTR" class="style14">
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>,
 		  <span dir="LTR" class="style14">
@@ -477,7 +480,9 @@ our proof of security makes to the KDM query function is <strong>inherent</stron
 		  		    <span style="font-weight: 400;">
 		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
 				2010.</span></span><br>
-		  [<a href="javascript:toggle('abstract-UOWHF')">Abstract</a>]<span style="font-weight: 400;"><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b></span> </span></h2>
+		  [<a href="javascript:toggle('abstract-UOWHF')">Abstract</a>] [<a href="papers/RompelRevisted/RompelRevisited-EurocryptCamera.pdf">PDF</a>]<br>
+		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
+					<a href="papers/RompelRevisted/RompelRevisited-eprint.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>&nbsp;</span></h2>
 		  <span style="font-weight: 400;">
 		  <div class="box" id="abstract-UOWHF" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">This paper revisits the construction of Universally One-Way Hash Functions 
