--- a/index.html
+++ b/index.html
@@ -523,8 +523,9 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 		  (CCC), 2010
 				</span>.<br>
 		  [<a href="javascript:toggle('abstract-NPtoSHC')">Abstract</a>] 
-		  <span style="font-weight: 400;">
-		  &nbsp;[<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SampleWithSize/SampleWithSize.pdf">PDF</a>]</span></span></h2> 
+		  <br>
+		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
+					[<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SampleWithSize/SampleWithSize.pdf">PDF</a>]</span></span><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>&nbsp;</span></h2> 
 		  <div class="box" id="abstract-NPtoSHC" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <p class="MsoNormal">We investigate the question of what languages can be decided efficiently with 
 the help of a<br>
