--- a/index.html
+++ b/index.html
@@ -520,8 +520,7 @@ Commitments and UOWHFs rely on the newer notion of inaccessible entropy.</span><
 
 		  <span style="font-weight: 400;">
 		  <span class="style14">IEEE Conference on Computational Complexity&nbsp; 
-		  (CCC), 2010
-				</span>.<br>
+		  (CCC), 2010</span>.<br>
 		  [<a href="javascript:toggle('abstract-NPtoSHC')">Abstract</a>] 
 		  <br>
 		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
