--- a/index.html
+++ b/index.html
@@ -376,9 +376,12 @@ DIV.Section1 {
 		  <span style="font-weight: 400;"><span dir="LTR" class="style14">
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a>,
 		  <span dir="LTR" class="style14">
-		  and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a></span></span></span><br>Efficiency Improvements in Constructions of Pseudorandom 
-					Generators from One-way Functions<span class="style14"> <img height="11" src="new.gif" width="28"><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
-		  [<a href="javascript:toggle('abstract-HillRevisted')">Abstract</a>] </span></h2>
+		  and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a></span></span></span><br>
+					Efficiency Improvements in Constructing Pseudorandom 
+					Generators from One-way Functions<span class="style14">&nbsp; <img height="11" src="new.gif" width="28"><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span><span style="font-weight: 400;">.<br>
+		  [<a href="javascript:toggle('abstract-HillRevisted')">Abstract</a>] 
+		  		  <span class="style14"><span dir="LTR" class="style14">
+					<a href="papers/HillRevisted/HillRevisted_STOC.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span> </span></h2>
 		  <span style="font-weight: 400;">
 		  <div class="box" id="abstract-HillRevisted" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We give a new construction of pseudorandom generators from any one-way 
@@ -411,8 +414,7 @@ NC<sup>1</sup>.
 
 		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
 				2010.</span></span></span><span style="font-weight: 400;"><br>
-		  [<a href="javascript:toggle('abstract-boundedkdm')">Abstract</a>] 
-		  [<a href="papers/BoundedKDM/boundedkdm_EuroCrypt.pdf">PDF</a>]<br>
+		  [<a href="javascript:toggle('abstract-boundedkdm')">Abstract</a>] c<br>
 		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
 					<a href="papers/BoundedKDM/boundedkdm.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
 		  <span style="font-weight: 400;">
