--- a/index.html
+++ b/index.html
@@ -414,7 +414,9 @@ NC<sup>1</sup>.
 
 		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
 				2010.</span></span></span><span style="font-weight: 400;"><br>
-		  [<a href="javascript:toggle('abstract-boundedkdm')">Abstract</a>] c<br>
+		  [<a href="javascript:toggle('abstract-boundedkdm')">Abstract</a>]
+					<span class="style14"><span dir="LTR" class="style14">
+					<a href="papers/BoundedKDM/boundedkdm_EuroCrypt.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span> <br>
 		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
 					<a href="papers/BoundedKDM/boundedkdm.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
 		  <span style="font-weight: 400;">
