--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ Constructions Based on One-way Functions</b></span><br>
 		  STOC 2007 special issue</span>. 
 		  </span></i></b></span><span style="font-weight: 400;"><br>[<a href="javascript:toggle('abstract-HONRV')">Abstract</a>] 
 		  </span><span class="style14">
-		  <a href="http://research.microsoft.com/en-us/um/people/iftach/papers/HNORV/HNORV-sicomp.pdf">[PDF]</a></span></h2>
+		  <a href="papers/HNORV/HNORV-sicomp.pdf">[PDF]</a></span></h2>
 		  <div class="box" id="abstract-HONRV" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We give a construction of statistically hiding commitment schemes
 					(ones where the hiding property holds against even computationally
