--- a/index.html
+++ b/index.html
@@ -868,8 +868,8 @@ Constructions Based on One-way Functions</b></span><br>
 				<a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a><br></span></span>
 		  <span dir="LTR"><b>Statistically-Hiding Commitments and Statistical 
 		  Zero-Knowledge Arguments from Any One-Way Function</b></span><br>
-		  <span style="font-weight: 400;"><span style="font-weight: 400;">
-		  <span dir="LTR" class="style14"><span dir="LTR">To appear in SIAM Journal of Computing (SICOMP)</span></span></span></span><span class="style14"><b><i><span style="font-weight: 400;">,
+		  <span style="font-weight: 400;"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
+		  Journal of Computing 2009</span></span></span><span class="style14"><b><i><span style="font-weight: 400;">,
 		  <span style="font-weight: 400;" class="style23">
 		  STOC 2007 special issue</span>. 
 		  </span></i></b></span><span style="font-weight: 400;"><br>[<a href="javascript:toggle('abstract-HONRV')">Abstract</a>] 
