--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ Constructions Based on One-way Functions</b></span><br>
 					results.</span></h2>
 		  </div>
 		  </li><li>
-		  <h2><span dir="LTR" style="font-weight: 400;">Iftach Haitner,
+		  <h2><span dir="LTR" style="font-weight: 400;"><a name="HONRV"></a>Iftach Haitner,
 		  <span dir="LTR">Minh-Huyen Nguyen, Shien Jin Ong</span>, </span>
 		  <span style="font-weight: 400;"><span dir="LTR" class="style14">
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a> and 
@@ -899,7 +899,11 @@ Constructions Based on One-way Functions</b></span><br>
 		  <span style="font-weight: 400;"><strong>Invited to the STOC 2007 
 		  special issue of SICOMP</strong></span></span>
 				</span><span style="font-weight: 400;"><br>[<a href="javascript:toggle('abstract-SHCfromOWF')">Abstract</a>]
-				<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SCfromOWF/SCfromOWF-STOC.pdf">[PDF]</a> [<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SCfromOWF/SCfromOWF.pps">Slides</a><span style="color: blue;">]</span><b><i><o:p></o:p></i></b></span></h2>
+				<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SCfromOWF/SCfromOWF-STOC.pdf">[PDF]</a> [<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/SCfromOWF/SCfromOWF.pps">Slides</a><span style="color: blue;">]</span><b><i><o:p><br></i></b>
+		  Full version is part of <span class="style14">
+		  <a href="papers/HNORV/HNORV-sicomp.pdf">[</a></span><span style="color: blue;"><a href="#HONRV">Statistically-Hiding 
+		  Commitments and Statistical Zero-Knowledge Arguments from Any One-Way 
+		  Function</a>]</span></o:p></span></h2>
 		  <div class="box" id="abstract-SHCfromOWF" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We give a construction of
 					statistically-hiding commitment schemes (ones where the
