--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ original verifier would.
 		  		  Annual ACM 
 		  Symposium on Theory of Computing (STOC), 2009</span><span style="font-weight: 400;">.<br>
 		  [<a href="javascript:toggle('abstract-AccessibleEntropy')">Abstract</a>] 
-		  [<a href="papers/AccessibleEntropy/AE-stoc.pdf">PDF</a>] [<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/AccessibleEntropy/AccEntSemniar_f.pptx">S<span class="style11">lides</span></a>] 
+		  [<a href="papers/AccessibleEntropy/AE-stoc.pdf">PDF</a>] [<a href="papers/AccessibleEntropy/AccEntSemniar.pptx">S<span class="style11">lides</span></a>] 
 					[<span style="font-weight: 400;"><span style="font-weight: 400;"><span dir="LTR" class="style14"><a href="http://intractability.princeton.edu/videos/stream/videoplay.html?videofile=cs/IW2009-500kb/Iftach%20Haitner.mp4">Video</a> 
 					(appx. 1 hour)]</span></span></span><br><span style="font-weight: 400;">Draft of full version
 				<a href="http://research.microsoft.com/en-us/um/people/iftach/papers/AccessibleEntropy/AccessibleEntropy_full.pdf">[PDF]</a><a href="http://research.microsoft.com/en-us/um/people/iftach/papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b></span> </span></h2>
