--- a/index.html
+++ b/index.html
@@ -190,15 +190,12 @@ DIV.Section1 {
 
     <td rowspan="2" style="width: 122%;" height="103">
 
-      <h1 class="style15">Iftach Haitner</h1>
-
-
-	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block;">
+      <h1 class="style15">Iftach Haitne</h1>
+	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block; width: 1192px; height: 211px;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
-		  <br>
-	</span></font></span></div>
+		<a href="javascript:MySwitch('Img1','Img2')">
+		  <img alt="" src="iftachG.jpg" class="style22" height="206" width="256"></a></span></font></span></div>
 
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
 
@@ -217,17 +214,14 @@ DIV.Section1 {
 
 	  <span class="style18">I am a postdoctoral researcher at the
 	  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-	  Research New England</a>.
-
-
-	  </span>
-
-
-	  </span></span></span>
-
-	  <span style="">
-	  <span class="style5" style="">
-	  <span class="style18">My main research interests are
+	  Research New England</a>, soon to join the
+	  <span class="style8">
+	  <span class="style11">
+	  <a href="http://www.cs.tau.ac.il">School of Computer Science</a> </span></span>
+	  at <span class="style8">
+	  <span class="style11">
+	  <a href="http://www.tau.ac.il">Tel Aviv University</a></span></span></span></span></span></span><span style=""><span class="style5" style=""><span class="style18">. 
+	  My main research interests are
 	  Cryptography and Computational Complexity.</span></span></span><span class="style8" style=""><br>
 	  </span>
 	  <span class="style8" style="">
@@ -337,7 +331,7 @@ DIV.Section1 {
   </tr>
     <tr>
 
-     <td>Email: [firstname] [at] microsoft.com</td>   <td> </td>
+     <td>Email: [iftachh] [at] gmail.com</td>   <td> </td>
     </tr>
 
 </tbody></table>
