--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ DIV.Section1 {
 	  <span class="style11" style="">
 	  <span class="style5">
 
-	  <span class="style18">I am a postdoctoral researcher at the
+	  <span class="style18">I am a postdoctoral researcher at
 	  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 	  Research New England</a>, soon to join the
 	  <span class="style8">
