--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ DIV.Section1 {
 
 
 
+.style24 {
+	color: #008000;
+}
+
+
+
 </style>
 
 
@@ -190,7 +196,8 @@ DIV.Section1 {
 
     <td rowspan="2" style="width: 122%;" height="103">
 
-      <h1 class="style15">Iftach Haitne</h1>
+      <h1 class="style15">Iftach Haitner (in Hebrew
+	  <span class="style24" lang="he">יפתח היטנר</span>)</h1>
 	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block; width: 1192px; height: 211px;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
