--- a/index.html
+++ b/index.html
@@ -128,13 +128,6 @@ DIV.Section1 {
 
 
 
-.style24 {
-	color: #008000;
-	font-size: x-large;
-}
-
-
-
 </style>
 
 
@@ -197,12 +190,15 @@ DIV.Section1 {
 
     <td rowspan="2" style="width: 122%;" height="103">
 
-      <h1 class="style15">Iftach Haitner&nbsp; <span class="style24" lang="he">יפתח היטנר</span><span class="style24"> </span></h1>
-	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block; width: 1192px; height: 211px;">
+      <h1 class="style15">Iftach Haitner</h1>
+
+
+	  <div class="box" id="Img1" style="border-style: none; border-width: 1px; display: block;">
 
 		<span style="font-weight: 400;"><font style="font-weight: 400; font-size: 9pt;" face="Verdana"><span class="style2" style="">
-		<a href="javascript:MySwitch('Img1','Img2')">
-		  <img alt="" src="iftachG.jpg" class="style22" height="206" width="256"></a></span></font></span></div>
+		<a href="javascript:MySwitch('Img1','Img2')"><img alt="" src="iftachG.jpg" class="style22" height="192" width="254"></a></span><br><span class="style18">
+		  <br>
+	</span></font></span></div>
 
     <div class="box" id="Img2" style="border-style: none; border-width: 1px; display: none;">
 
@@ -338,7 +334,7 @@ DIV.Section1 {
   </tr>
     <tr>
 
-     <td>Email: [iftachh] [at] gmail.com</td>   <td> </td>
+     <td>Email: iftachh [at] gmail.com</td>   <td> </td>
     </tr>
 
 </tbody></table>
