--- a/index.html
+++ b/index.html
@@ -322,27 +322,30 @@ DIV.Section1 {
 
 </tr>
  <tr>
-  <td width="50%">Microsoft Research, Office 14079</td>
-      <td width="50%">Phone:(857)453-6358</td>
+  <td width="50%">Tel Aviv university, Schreiber Building, Office ?</td>
+      
 
  </tr>
-
  <tr>
-<td> One Memorial Drive </td>
-  <td>Fax: (857)453-6063</td>
+<td width="50%">Phone:+972-3-6408040 </td>
+</tr>
+ 
+ <tr>
+  <td>Fax: +972-3-6409373</td>
 
 
  </tr>
+ <tr>
+
+     <td>Email: [firstname] [dot] [lastname] [at] cs.tau.ac.il </td>   <td> </td>
+    </tr>
   <tr>
-     <td>Cambridge, MA 02142  </td>
+     <td width="90%"> Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69978, Israel </td>
 
      <td> </td>
 
   </tr>
-    <tr>
-
-     <td>Email: iftachh [at] gmail.com</td>   <td> </td>
-    </tr>
+    
 
 </tbody></table>
 		</div>
