--- a/index.html
+++ b/index.html
@@ -222,16 +222,15 @@ DIV.Section1 {
 	  <span class="style11" style="">
 	  <span class="style5">
 
-	  <span class="style18">I am a postdoctoral researcher at
+	  <span class="style18">I have just finished two years as a postdoctoral researcher at
 	  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-	  Research New England</a>, soon to join the
+	  Research New England</a>, <br>soon to join the
 	  <span class="style8">
 	  <span class="style11">
 	  <a href="http://www.cs.tau.ac.il">School of Computer Science</a> </span></span>
 	  at <span class="style8">
 	  <span class="style11">
-	  <a href="http://www.tau.ac.il">Tel Aviv University</a></span></span></span></span></span></span><span style=""><span class="style5" style=""><span class="style18">. 
-	  My main research interests are
+	  <a href="http://www.tau.ac.il">Tel Aviv University</a></span></span></span></span></span></span><span style=""><span class="style5" style=""><span class="style18">.<br>My main research interests are
 	  Cryptography and Computational Complexity.</span></span></span><span class="style8" style=""><br>
 	  </span>
 	  <span class="style8" style="">
@@ -247,9 +246,8 @@ DIV.Section1 {
 		</span> 
 
 	    <span class="style21">
-	  <span style="font-weight: 400;"><span class="style4">I am a postdoctoral 
-					researcher at the 	  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft 
-		Research New England</a> since August 2008. Earlier on 2008, I did a six 
+	  <span style="font-weight: 400;"><span class="style4">I have just finished two years as a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft 
+		Research New England</a>, soon to join the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Prior to the time in Microsoft Research, I did a six 
 		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department 
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
 		Ronen shaltiel</a></span><span class="style8" style="">. 
