--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ DIV.Section1 {
 	  <span class="style11" style="">
 	  <span class="style5">
 
-	  <span class="style18">I have just finished two years as a postdoctoral researcher at
+	  <span class="style18">I have just finished a two-year preiod as a postdoctoral researcher at
 	  <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 	  Research New England</a>, <br>soon to join the
 	  <span class="style8">
@@ -246,7 +246,8 @@ DIV.Section1 {
 		</span> 
 
 	    <span class="style21">
-	  <span style="font-weight: 400;"><span class="style4">I have just finished two years as a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft 
+	  <span style="font-weight: 400;"><span class="style4">I have just finished a two-year preiod as a postdoctoral researcher at
+ <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft 
 		Research New England</a>, soon to join the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Prior to the time in Microsoft Research, I did a six 
 		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department 
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
